added code for rendering the tailwind component using react-email

--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-email/body": "0.0.2",
+    "@react-email/button": "0.0.8",
+    "@react-email/head": "0.0.5",
+    "@react-email/html": "0.0.4",
+    "@react-email/render": "0.0.7",
+    "@react-email/tailwind": "0.0.8",
+    "@react-email/text": "0.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -34,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
